# projetocodbar

projetocodbar/: Dockerfile  docker-compose.yaml  pyproject.toml
projetocodbar/projetocodbar/: __init__.py
